--- a/Parte 2. S06. Mineria de datos y Machine Learning con sparklyr.ipynb
+++ b/Parte 2. S06. Mineria de datos y Machine Learning con sparklyr.ipynb
@@ -4,13 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Taller: Análisis de datos masivos con SparkR 2.0\n",
-    "**VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016**\n",
+    "<span style='font-size:2.4em'>Procesamiento masivo de datos con SparkR</span>\n",
     "\n",
-    "**Manuel Jesús Parra Royón**\n",
+    "<span style='font-size:1.5em'>VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016</span>\n",
+    "\n",
+    "Taller impartido por: <span style='font-size:1.2em'>Manuel Jesús Parra Royón</span>\n",
+    "\n",
+    "\n",
     "![Alt](https://sites.google.com/site/manuparra/home/logoparty.png)\n",
     "\n",
-    "[Soft Computing and Intelligent Information Systems](https://sci2s.ugr.es) | [Distributed Computational Intelligence and Time Series Lab](https://dicits.ugr.es) | [Universidad de Granada](http://www.ugr.es)\n"
+    "<HR>"
    ]
   },
   {
@@ -26,21 +29,21 @@
    "source": [
     "** Biblioteca de Machine Learning Spark (MLlib) con la Interfaz sparklyr **\n",
     "\n",
-    "Carácteristicas fundamentales:\n",
+    "*Carácteristicas fundamentales:*\n",
     "\n",
     "La bilbioteca ```sparklyr``` proporciona enlaces a la biblioteca de ML distribuida de Spark. En particular, sparklyr le permite acceder a las rutinas de ML proporcionadas por el paquete ``spark.ml`` de Spark. Además junto con la interfaz ``dplyr`` de ``sparklyr``, puede crear y afinar fácilmente los flujos de trabajo de ML en Spark, orquestados enteramente dentro de ``R``.\n",
     "\n",
     "Sparklyr proporciona tres familias de funciones que puede utilizar con el aprendizaje de máquina Spark:\n",
     "\n",
-    "* Algoritmos de aprendizaje automático para el análisis de datos (funciones  ml_*)\n",
-    "* Transformadores de características para manipular características individuales (funciones ft_*)\n",
-    "* Funciones para manipular Spark DataFrames (funciones sdf_*)\n",
+    "* Algoritmos de aprendizaje automático para el análisis de datos (funciones  ``ml_*``)\n",
+    "* Transformadores de características para manipular características individuales (funciones ``ft_*``)\n",
+    "* Funciones para manipular Spark DataFrames (funciones ``sdf_*``)\n",
     "\n",
     "El flujo de trabajo para el análisis de datos  con ``sparklyr`` podría estar compuesto de las siguientes etapas:\n",
     "\n",
     "- Realizar consultas SQL a través de la interfaz sparklyr dplyr,\n",
-    "- Utilizar la familia de funciones sdf_ * y ft_ * para generar nuevas columnas o particionar su conjunto de datos,\n",
-    "- Elegir un algoritmo de aprendizaje automático apropiado de la familia de funciones ml_ * para modelar los datos,\n",
+    "- Utilizar la familia de funciones ``sdf_`` * y ``ft_`` * para generar nuevas columnas o particionar su conjunto de datos,\n",
+    "- Elegir un algoritmo de aprendizaje automático apropiado de la familia de funciones ``ml_ *`` para modelar los datos,\n",
     "- Inspeccionar la calidad del ajuste de su modelo y usarlo para hacer predicciones con nuevos datos,\n",
     "- Recopilar los resultados para la visualización y análisis posterior en R\n",
     "\n",
@@ -69,20 +72,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"background-color:red;color:white\">&nbsp; &nbsp; Es necesario reiniciar Spark para poder trabajar con esta sesión de sparklyr &nbsp; &nbsp; </span> \n",
+    "<span style=\"background-color:red;color:white\">&nbsp; &nbsp; Es necesario reiniciar Spark para poder trabajar con esta sesión de sparklyr &nbsp; &nbsp; <BR>&nbsp; &nbsp; Para ello, ve a la Máquina Virtual para el proceso de Spark, para luego volver a cargarlo &nbsp; &nbsp;</span> \n",
     "\n",
     "Ahora para conectar con Spark y abrir una sesión usaremos la siguiente sintaxis (simiar a la del paquete SparkR aunque  con ligeras diferencias):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: ‘dplyr’\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Usamos la libreria sparklyr y dplyr\n",
+    "# Usamos la libreria sparklyr y dplyr.\n",
+    "# Ajustar el nivel de visualización de errores !\n",
     "options(warn=0)\n",
     "\n",
     "# Incluimos la bilbioteca de sparklyr\n",
@@ -147,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +179,7 @@
     "\n",
     "tttm <- spark_read_csv(sc, \n",
     "                       name=\"tttm\", \n",
-    "                       path=\"datasets/databig/ECBDL14_10tst.data\", \n",
+    "                       path=\"/root/TallerSparkR/datasets/databig/ECBDL14_10tst.data\", \n",
     "                       delimiter = \",\", \n",
     "                       header=TRUE,\n",
     "                       overwrite = TRUE)\n"
@@ -205,7 +227,7 @@
     "# Escritura de un fichero de datos CSV\n",
     "\n",
     "spark_write_csv(tttm, \n",
-    "                path=\"datasets/databig/ECBDL14_10tst_saved.data\", \n",
+    "                path=\"/root/TallerSparkR/datasets/databig/ECBDL14_10tst_saved.data\", \n",
     "                delimiter = \",\", \n",
     "                header=TRUE)\n",
     "\n"
@@ -313,11 +335,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 2897917\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Source:   query [?? x 3]\n",
+       "Database: spark connection master=local[1] app=sparklyr local=TRUE\n",
+       "\n",
+       "  class   count   percent\n",
+       "  <int>   <dbl>     <dbl>\n",
+       "1     0 2849280 98.321657\n",
+       "2     1   48637  1.678343"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Agrupamos el dataset por clase y luego contamos los registros.\n",
     "\n",
@@ -348,17 +393,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Source:   query [?? x 3]\n",
+       "Database: spark connection master=local[1] app=sparklyr local=TRUE\n",
+       "\n",
+       "  class   count   percent\n",
+       "  <int>   <dbl>     <dbl>\n",
+       "1     0 2849280 98.321657\n",
+       "2     1   48637  1.678343"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Source:   query [?? x 4]\n",
+       "Database: spark connection master=local[1] app=sparklyr local=TRUE\n",
+       "\n",
+       "  class   count maxf1 minf1\n",
+       "  <int>   <dbl> <dbl> <dbl>\n",
+       "1     0 2849280 0.768 0.094\n",
+       "2     1   48637 0.662 0.094"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Source:   query [?? x 11]\n",
+       "Database: spark connection master=local[1] app=sparklyr local=TRUE\n",
+       "\n",
+       "     f1    f2    f3    f4    f5    f6    f7    f8    f9   f10 class\n",
+       "  <dbl> <dbl> <int> <int> <int> <int> <int> <int> <int> <int> <int>\n",
+       "1   0.5     0    -3    -1    -2    -1     2     0    -3     1     0\n",
+       "2   0.5     0    -3    -1    -1     1     2     0    -3     1     0\n",
+       "3   0.5     0    -3    -1    -1    -3    -3     0    -3    -4     0\n",
+       "4   0.5     0    -3    -1    -2    -1    -3     0    -3    -4     0\n",
+       "5   0.5     0    -3    -1    -4    -1    -2     0    -3     0     0\n",
+       "6   0.5     0    -3    -1     1    -1    -2     0    -3     0     0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "library(magrittr)\n",
+    "\n",
     "\n",
     "# También podemos usar magittr para hacer los mismo de un modo más claro. El ejemplo de arriba y este son lo mismo.\n",
     "tttm %>% \n",
     "    group_by(class) %>%\n",
-    "    summarize(count = n(), percent= n()/num_regs *100.0 )\n"
+    "    summarize(count = n(), percent= n()/num_regs *100.0 )\n",
+    "\n",
+    "tttm %>% \n",
+    "    group_by(class) %>%\n",
+    "    summarize(count = n(), maxf1=max(f1),minf1= min(f1))\n",
+    "head(tttm)\n"
    ]
   },
   {
@@ -441,6 +543,24 @@
     "# Crea una muestra aleatoria de los datos.  80% de los datos\n",
     "train <- sample_frac(tttm, 0.90)\n",
     "count(train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "También podemos usar:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# sdf_partition(dataset,training = 0.5, test = 0.5, seed = 1099)"
    ]
   },
   {
@@ -658,17 +778,23 @@
    "source": [
     "# Algoritmos de ML para el análisis de datos\n",
     "\n",
-    "Con Spark + R y la biblioteca sparklyr se pueden orquestar algoritmos de ML en un cluster con Spark. Estas funciones de ML, conectan directamente con la API de Spark\n",
+    "Con Spark + R y la biblioteca sparklyr se pueden orquestar algoritmos de ML en un cluster con Spark. \n",
+    "\n",
+    "Estas funciones de ML, conectan directamente con la API de Spark\n",
     "\n",
     "1. Ajustamos un modelo a nuestro conjunto de entrenamiento\n",
-    "2. Evaluamos nuestro rendimiento predictivo sobre el conjunto de test.\n"
+    "2. Evaluamos nuestro rendimiento predictivo sobre el conjunto de test.\n",
+    "\n",
+    "La biblioteca tiene mayor número de funciones para la minería de datos que la propia de SparkR.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Regresión Lineal"
+    "### Regresión Lineal\n",
+    "\n",
+    "En estadística la regresión lineal o ajuste lineal es un modelo matemático usado para aproximar la relación de dependencia entre una variable dependiente Y, las variables independientes Xi y un término aleatorio ε"
    ]
   },
   {
@@ -766,7 +892,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Regresión logística"
+    "### Regresión logística\n",
+    "\n",
+    "En estadística, la regresión logística es un tipo de análisis de regresión utilizado para predecir el resultado de una variable categórica (una variable que puede adoptar un número limitado de categorías) en función de las variables independientes o predictoras. Es útil para modelar la probabilidad de un evento ocurriendo como función de otros factores. El análisis de regresión logística se enmarca en el conjunto de Modelos Lineales Generalizados (GLM por sus siglas en inglés)"
    ]
   },
   {
@@ -804,7 +932,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Random Forest"
+    "### K-Means\n",
+    "\n",
+    "K-means es un método de agrupamiento, que tiene como objetivo la partición de un conjunto de n observaciones en k grupos en el que cada observación pertenece al grupo cuyo valor medio es más cercano. \n",
+    "\n",
+    "Forma parte de las técnicas de ``clustering``\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#model <- ml_kmeans(select(iris_tbl,Petal_Width, Petal_Length),centers = 3)\n",
+    "\n",
+    "model <- iris_tbl %>%\n",
+    "  select(Petal_Width, Petal_Length) %>%\n",
+    "  ml_kmeans(centers = 3)\n",
+    "\n",
+    "# Cuidado con collect !!!\n",
+    "iris_tbl %>%\n",
+    "  select(Petal_Width, Petal_Length) %>%\n",
+    "  collect %>%\n",
+    "  ggplot(aes(Petal_Length, Petal_Width)) +\n",
+    "    geom_point(data = model$centers, aes(Petal_Width, Petal_Length), size = 60, alpha = 0.1) +\n",
+    "    geom_point(aes(Petal_Width, Petal_Length), size = 2, alpha = 0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest\n",
+    "\n",
+    "Random forest también conocido en castellano como '\"Selvas Aleatorias\"' es una combinación de árboles predictores tal que cada árbol depende de los valores de un vector aleatorio probado independientemente y con la misma distribución para cada uno de estos. Es una modificación sustancial de bagging que construye una larga colección de árboles no correlacionados y luego los promedia. Se usa para regresión y para clasificación.\n"
    ]
   },
   {
@@ -840,25 +1004,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in sdf_predict(ml_rf, partitions$test): objeto 'partitions' no encontrado\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in sdf_predict(ml_rf, partitions$test): objeto 'partitions' no encontrado\nTraceback:\n",
+      "1. sdf_predict(ml_rf, partitions$test)"
+     ]
+    }
+   ],
    "source": [
-    "#Probamos con el dataset completo\n",
-    "ml_rf <- ml_random_forest(tttm,response=\"class\",features=c(\"f1\",\"f2\",\"f3\",\"f4\"),num.trees = 20)\n",
-    "sdf_predict(ml_rf, partitions$test)"
+    "#Probamos con el dataset completo. Cuidado !!! Coste en tiempo elevado !\n",
+    "ml_rf <- ml_random_forest(tttm,response=\"class\",features=c(\"f1\",\"f2\",\"f3\",\"f4\"),num.trees = 20,type = \"classification\")\n",
+    "\n",
+    "#sdf_predict(ml_rf, partitions$test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Call: class ~ f1 + f2 + f3 + f4\n",
+       "\n",
+       "RandomForestClassificationModel (uid=rfc_b43e780bc182) with 20 trees"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in print(ml_score): objeto 'ml_score' no encontrado\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in print(ml_score): objeto 'ml_score' no encontrado\nTraceback:\n",
+      "1. print(ml_score)"
+     ]
+    }
+   ],
    "source": [
+    "ml_rf\n",
     "print(ml_score)"
    ]
   },
@@ -866,7 +1063,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Análisis de componentes principales"
+    "### Análisis de componentes principales\n",
+    "\n",
+    "En estadística, el análisis de componentes principales es una técnica utilizada para reducir la dimensionalidad de un conjunto de datos.\n",
+    "\n",
+    "Técnicamente, el PCA busca la proyección según la cual los datos queden mejor representados en términos de mínimos cuadrados. Esta convierte un conjunto de observaciones de variables posiblemente correlacionadas en un conjunto de valores de variables sin correlación lineal llamadas componentes principales.\n",
+    "\n",
+    "El PCA se emplea sobre todo en análisis exploratorio de datos y para construir modelos predictivos."
    ]
   },
   {
@@ -879,7 +1082,10 @@
    "source": [
     "# PCA\n",
     "pca_model <- ml_pca(partitions$training)\n",
-    "print(pca_model)"
+    "print(pca_model)\n",
+    "\n",
+    "# Calculate explained variance\n",
+    "# pca_model$sdev^2 / sum(pca_model$sdev^2) # Sólo para R\n"
    ]
   },
   {
@@ -915,6 +1121,43 @@
     "\n",
     "# Score all the models\n",
     "ml_score <- lapply(ml_models, score_test_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<HR>\n",
+    "\n",
+    "### Cierre de la conexión con SPARK\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {},
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in instances[[i]]: subíndice fuera de  los límites\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in instances[[i]]: subíndice fuera de  los límites\nTraceback:\n",
+      "1. spark_disconnect(sc)",
+      "2. spark_disconnect.spark_connection(sc)",
+      "3. spark_connections_remove(x)"
+     ]
+    }
+   ],
+   "source": [
+    "spark_disconnect(sc)"
    ]
   },
   {
