Fixing Before Workshop

--- a/Parte 1. S01. Procesamiento de datos masivos.ipynb
+++ b/Parte 1. S01. Procesamiento de datos masivos.ipynb
@@ -232,7 +232,7 @@
     "collapsed": true
    },
    "source": [
-    "Las ventajas principales de Spark:\n",
+    "**Las ventajas principales de Spark:**\n",
     "\n",
     "1. Una plataforma de código abierto con una comunidad activa\n",
     "2. Una plataforma rápida \n",
