--- a/Parte 1. S04. Entorno de trabajo para el taller.ipynb
+++ b/Parte 1. S04. Entorno de trabajo para el taller.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "nbpresent": {
-     "id": "c698a2da-cc7f-4b9b-809d-0761b5113cc6"
+     "id": "370bfa4e-8166-45db-a647-fafb435f326a"
     }
    },
    "source": [
@@ -12,7 +12,23 @@
     "\n",
     "<span style='font-size:1.5em'>VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016</span>\n",
     "\n",
-    "Taller impartido por: <span style='font-size:1.2em'>Manuel Jesús Parra Royón</span>\n"
+    "Taller impartido por: <span style='font-size:1.2em'>Manuel Jesús Parra Royón</span>\n",
+    "\n",
+    "\n",
+    "![Alt](https://sites.google.com/site/manuparra/home/logoparty.png)\n",
+    "\n",
+    "<HR>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "nbpresent": {
+     "id": "c698a2da-cc7f-4b9b-809d-0761b5113cc6"
+    }
+   },
+   "source": [
+    "## Entorno de trabajo para el taller "
    ]
   },
   {
@@ -23,32 +39,56 @@
     }
    },
    "source": [
-    "![Spark+R](https://sites.google.com/site/manuparra/home/SparkRlogo.png)\n",
-    "\n",
-    "<HR>"
+    "![Spark+R](https://sites.google.com/site/manuparra/home/SparkRlogo.png)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"font-size:2em\">Imparte el taller:</span>\n",
+    "Lo primero a realizar es ejecutar sobre el terminal de la Máquina Virtual o de vuestro sistema:\n",
+    "\n",
+    "**Arrancamos el entorno de Spark:**\n",
+    "\n",
+    "```\n",
+    "/usr/local/spark/sbin/start-all.sh\n",
+    "```\n",
+    "\n",
+    "**Arrancamos JupyterNotebook:**\n",
+    "\n",
+    "```\n",
+    "jupyter notebook --notebook-dir=/root/TallerSparkR --no-browser --port=8888 --ip=0.0.0.0\n",
+    "```\n",
+    "\n",
+    "Esto hará que funcione JupyterNotebooks en el puerto 8888, por lo tenemos que acceder desde nuestro navegador web a la dirección: http://localhost:25980    \n",
+    "\n",
+    "¿Por qué es diferente el puerto donde se lanza Jupyter y la url? *En VirtualBox se ha redireccionado el puerto del 25980 al 8888.*\n",
+    "\n",
+    "En entorno que se ha elegido para el  desarrollo de las sesiones de trabajo en el taller de Spark + R es **Jupyter Notebook** en lugar de la herramienta **RStudio**.\n",
+    "\n",
+    "![AltJupyter](http://blog.jupyter.org/content/images/2015/02/jupyter-sq-text.png)\n",
+    "\n",
+    "Algunas de sus caracteriticas principales:\n",
+    "\n",
+    "1. Jupyter Notebook es **una aplicación Web en la nube** que nos permite crear y compartir documentos que contienen código vivo, ecuaciones, textos, visualizaciones, etc. \n",
+    "\n",
+    "2. De esta forma podemos crear **tutoriales interactivos**, donde el lector pueda ir probando y comprobando en tiempo real aquellos conceptos o ejercicios que le vamos mostrando.\n",
+    "\n",
+    "3. Se ejecuta **\"en la nube\"** por lo que no hay que instalar nada.\n",
     "\n",
     "\n",
-    "<img src=\"https://sites.google.com/site/manuparra/home/manuparra.jpg\">\n",
-    "Manuel Jesús Parra Royón\n",
+    "El objeto más importante en jupyter es el **notebook**. \n",
     "\n",
-    "PhD student. BigData time series data mining.\n",
+    "Cada notebook está formado por un conjunto de **celdas** de contenido, donde el tipo de las mismas varía desde código hasta headings, pasando por markdown (para la inclusión de texto narrativo):\n",
     "\n",
-    "Departamento de Ciencias de la Computación e Inteligencia Artificial.\n",
+    "* Codigo fuente (de cualquier lenguaje, con excepciones, siempre que sean interpretados)\n",
+    "* Texto en formato MARKDOWN\n",
     "\n",
-    "Distributed Computational Intelligence and Time Series Laboratory<BR>\n",
     "\n",
-    "Universidad de Granada\n",
+    "Además todas las celdas de un documento de Jupyter pueden ser ejecutadas y, en base a su tipo, obtendremos un resultado u otro. \n",
     "\n",
-    "<a href=\"mailto:manuelparra@decsai.ugr.es\">manuelparra@decsai.ugr.es</a>  \n",
+    "Las celdas markdown y headings nos van a servir para añadir texto y formato a nuestro notebook. Es decir estas celdas permitirán diseñar nuestro documento y hacerlo perfecto para presentarlo.\n",
     "\n",
-    "Twitter: <a href=\"https://twitter.com/manugrapevine\">@manugrapevine</a>\n",
     "\n",
     "\n"
    ]
@@ -59,128 +99,75 @@
     "collapsed": true
    },
    "source": [
-    "<span style=\"font-size:2.0em\">Presentación</span>\n",
+    "### Revisamos la interfaz de usuario de **Jupyter Notebooks**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.- Manejo de celdas y tipo de celdas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.- Opciones de uso rápido y menú de operaciones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.- Gestión de las las celdas y formato"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.- Publicación de los notebooks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Primer ejemplo en R para Jupyter Notebooks\n",
+    "\n",
+    "Utilizamos la zona de pruebas para trabajar con los Notebooks en Jupyter, R y SparkR."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<HR>\n",
+    "# Zona de pruebas del NOTEBOOK en SparkR\n",
+    "![FooterSparkR](https://sites.google.com/site/manuparra/home/footer_SparkR_v2.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Escribe todas las pruebas en R que necesites a partir de aquí\n",
+    "\n",
     "<HR>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"font-size:1.3em\">\n",
-    "El taller se divide en dos partes diferenciadas:\n",
-    "\n",
-    "* Una parte teórica sobre <B>R, Spark, y R sobre Spark</B>.\n",
-    "* Otra parte completamente práctica y de experimientación con <B>SparkR<B>.\n",
-    "\n",
-    "<BR><BR>\n",
-    "<BR>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"font-size:2.0em\">Objetivos del taller</span>\n",
-    "<HR>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Los objetivos a cubrir en el taller son los siguientes:\n",
-    "\n",
-    "* Conocer la problemática del procesamiento masivo de datos.\n",
-    "* Fijar concepto y práctica sobre uso R sobre Spark para el procesado masivo de datos.\n",
-    "* Instalar y configurar el sistema completo para poder trabajar con R y Spark.\n",
-    "* Trabajar con datos masivos (filtrado, agregado, transformaciones), procesar datasets masivos son SparkSQL, etc..\n",
-    "* Analizar datasets con las librerías de Machine Learning de los paquetes SparkR y sparklry\n",
-    "* Utilizar herramientas para visualizar los datos de datasets masivos.\n",
-    "\n",
-    "<BR>\n",
-    "<BR>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"font-size:2.0em\">Contenido</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "En el taller de procesamientos masivo de datos con SparkR vamos a ver lo siguiente:\n",
-    "\n",
-    "\n",
-    "* **Introducción al procesamiento de datos masivos**<BR>\n",
-    "    Breve introducción al procesamiento de datos, el problema de trabajar con grandes conjuntos de datos, Hadoop,Motivación de Spark, características, etc...<BR>\n",
-    "\n",
-    "* **Notas sobre R, Spark y SparkR**<BR>\n",
-    "    Introducción a R, motivación de R para datos 'pequeños' y datos 'grandes', Spark y sus características, biblioteca de SparkR para análisis de datos masivos con R.<BR>\n",
-    "\n",
-    "* **Instalación de las herramientas necesarias para el taller**<BR>\n",
-    "    Veremos todas las herramientas necesarias para poder trabajar con el entorno de SparkR, así como la instalación y puesta en marcha de toda la infraestructura necesaria para el taller. Inicio del entorno de trabajo habitual para trabajar en el taller.<BR>\n",
-    "\n",
-    "* **Entorno de trabajo del taller**<BR>\n",
-    "    Detalles del manejo del entorno de trabajo con JupyterNotebooks y Spark + R<BR>\n",
-    "\n",
-    "* **Inicio del entorno de trabajo**<BR>\n",
-    "    Flujo de trabajo con Spark + R<BR>\n",
-    "\n",
-    "* **Primeros pasos con SparkR**<BR>\n",
-    "    Trabajo con ejemplos de uso de Spark + R <BR>\n",
-    "\n",
-    "* **Lectura y Escritura de datos con SparkR**<BR>\n",
-    "    Trabajo con fuentes de datos, y tipos de conjuntos de datos, CSV, JSON, Parquet, ... Lectura y Escritura. Esquemas, y breve trabajo con SparkSQL. <BR>\n",
-    "\n",
-    "* **Operaciones y procesado de SparkDataFrames**<BR>\n",
-    "    Trabajamos y procesamos conjuntos de datos masivos con SparkSQL y funciones de agregación, filtrado, selección, etc. Usamos flujos de trabajo con magrittr. Revisamos la funcionalidad completa de la biblioteca de SparkR.<BR>\n",
-    "\n",
-    "* **Minería de datos con la biblioteca de SparkR**<BR>\n",
-    "    Aplicamos las técnicas de minería de datos y Machine Learning que proporciona SparkR: GLM, KMeans, NaiveBayes y AFT.<BR>\n",
-    "\n",
-    "* **Minería de datos con la biblioteca sparklyr**<BR>\n",
-    "    Utilizamos la funcionalidad de la biblioteca ``sparklyr`` para procesar conjuntos de datos. Aplicamos los métodos de minería de datos y otras operaciones.<BR>\n",
-    "\n",
-    "* **Visualización de datos**<BR>\n",
-    "    Visualización con la herramienta de experimentación reproducible Zeppelin (beta)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Breve encuesta sobre el uso de R\n",
-    "\n",
-    "![formsg](http://www.irvineducator.com/uploads/6/3/7/4/63744617/4194226_orig.jpg)\n",
-    "\n",
-    "\n",
-    "Rellena esta mini-encuesta sobre el uso de R:\n",
-    "\n",
-    "\n",
-    "https://goo.gl/forms/AK4wKmgYNGaEdvLy1\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"font-size:2.0em\">Comenzamos el Taller !</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Vamos manos a la obra !\n",
+    "# Escribe tu codigo ! No te asustes !"
+   ]
   }
  ],
  "metadata": {
