--- a/Parte 2. S07. Visualizacion dinamica de datos con SparkR.ipynb
+++ b/Parte 2. S07. Visualizacion dinamica de datos con SparkR.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "<span style='font-size:1.5em'>VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016</span>\n",
     "\n",
-    "Taller impartido por: <span style='font-size:1.2em'>Manuel Jesús Parra Royón</span>\n"
+    "Taller impartido por: <span style='font-size:1.2em'>Manuel Jesús Parra Royón</span>\n",
+    "\n",
+    "![lpa](https://sites.google.com/site/manuparra/home/logoparty.png)\n"
    ]
   },
   {
@@ -30,27 +32,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "<span style=\"font-size:2em\">Imparte el taller:</span>\n",
-    "\n",
-    "\n",
-    "<img src=\"https://sites.google.com/site/manuparra/home/manuparra.jpg\">\n",
-    "Manuel Jesús Parra Royón\n",
-    "\n",
-    "PhD student. BigData time series data mining.\n",
-    "\n",
-    "Departamento de Ciencias de la Computación e Inteligencia Artificial.\n",
-    "\n",
-    "Distributed Computational Intelligence and Time Series Laboratory<BR>\n",
-    "\n",
-    "Universidad de Granada\n",
-    "\n",
-    "<a href=\"mailto:manuelparra@decsai.ugr.es\">manuelparra@decsai.ugr.es</a>  \n",
-    "\n",
-    "Twitter: <a href=\"https://twitter.com/manugrapevine\">@manugrapevine</a>\n",
-    "\n",
-    "\n"
+    "<span style=\"font-size:2.0em\">Visualización dinámica de datos con SparkR</span>\n",
+    "<HR>"
    ]
   },
   {
@@ -59,118 +46,91 @@
     "collapsed": true
    },
    "source": [
-    "<span style=\"font-size:2.0em\">Presentación</span>\n",
-    "<HR>"
+    "En esta parte final del taller, vamos a trabajar con una herramienta llamada APACHE ZEPPELIN."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"font-size:1.3em\">\n",
-    "El taller se divide en dos partes diferenciadas:\n",
+    "** Apache Zeppelin **\n",
     "\n",
-    "* Una parte teórica sobre <B>R, Spark, y R sobre Spark</B>.\n",
-    "* Otra parte completamente práctica y de experimientación con <B>SparkR<B>.\n",
+    "Es un NOTEBOOK  (similar a Jupyter, del que ya sois expertos), que permite el análisis interactivo de datos.\n",
+    "Se pueden realizar documentos dirijidos a datos, interactivos y colaborativos, con SPARKSQL, SCALA, R, python y muchos más.\n",
     "\n",
-    "<BR><BR>\n",
-    "<BR>"
+    "Es un NOTEBOOK Multiproposito y contiene:\n",
+    "\n",
+    "* Data Ingestion\n",
+    "* Data Discovery\n",
+    "* Data Analytics\n",
+    "* Data Visualization & Collaboration\n",
+    "\n",
+    "Usaremos la versión 0.62 de Apache Zeppelin.\n",
+    "\n",
+    "Para inicial el entorno de trabajo con Apache ZEPPELIN accedemos a la Máquina Virtual:\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"font-size:2.0em\">Objetivos del taller</span>\n",
-    "<HR>"
+    "    cd /root/zeppelin/\n",
+    "    \n",
+    "    sh conf/zeppeling-env.sh\n",
+    "    \n",
+    "    ./bin/zeppelin-daemon.sh start"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los objetivos a cubrir en el taller son los siguientes:\n",
+    "Despues de ejecutar estos comandos se habilita un nuevo puerto en la Máquina Virtual que permite acceder a la siguiente URL:\n",
     "\n",
-    "* Conocer la problemática del procesamiento masivo de datos.\n",
-    "* Fijar concepto y práctica sobre uso R sobre Spark para el procesado masivo de datos.\n",
-    "* Instalar y configurar el sistema completo para poder trabajar con R y Spark.\n",
-    "* Trabajar con datos masivos (filtrado, agregado, transformaciones), procesar datasets masivos son SparkSQL, etc..\n",
-    "* Analizar datasets con las librerías de Machine Learning de los paquetes SparkR y sparklry\n",
-    "* Utilizar herramientas para visualizar los datos de datasets masivos.\n",
+    "http://localhost:9090\n",
     "\n",
-    "<BR>\n",
-    "<BR>"
+    "Veremos está aplicación en la Nube:\n",
+    "\n",
+    "![zeppelin](https://sites.google.com/site/manuparra/home/zeppelinb.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"font-size:2.0em\">Contenido</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "En el taller de procesamientos masivo de datos con SparkR vamos a ver lo siguiente:\n",
+    "Para comenzar a trabajar, usamos ``create new note``. \n",
+    "\n",
+    "Le asignamos un nombre. Una vez dentro de la nueva nota usamos:\n",
+    "\n",
+    "```\n",
+    "    %spark.r\n",
+    "```\n",
+    "\n",
+    "Con esto le indicamos que queremos crear un notebook para trabajar con Spark + R.\n",
+    "\n",
+    "En Zeppelin, no es necesario abrir la conexión con Spark como se hacía con SparkR, ya que Zeppelin abre una conexión por defecto que se ha confingurado de antemano. Tampoco es necesario importar la biblioteca `sparkR`.\n",
+    "\n",
+    "Igualmente podemos trabajar con ``sparklry``, pero no tendremos las mejoras que ofrece sparkR para la visualización dinámica de datos.\n",
+    "\n",
+    "```\n",
+    "    df_nyctrips <- read.df(\"/root/TallerSparkR/datasets/yellow_tripdata_2016-02_small3.csv\", \"csv\", header = \"true\", inferSchema = \"true\")\n",
+    "    createOrReplaceTempView(df_nyctrips,\"slqdf_filtered_nyc\")\n",
+    "```\n",
     "\n",
     "\n",
-    "* **Introducción al procesamiento de datos masivos**<BR>\n",
-    "    Breve introducción al procesamiento de datos, el problema de trabajar con grandes conjuntos de datos, Hadoop,Motivación de Spark, características, etc...<BR>\n",
+    "Ahora usaremos una celda de tipo SQL\n",
     "\n",
-    "* **Notas sobre R, Spark y SparkR**<BR>\n",
-    "    Introducción a R, motivación de R para datos 'pequeños' y datos 'grandes', Spark y sus características, biblioteca de SparkR para análisis de datos masivos con R.<BR>\n",
+    "```\n",
+    "    %sql \n",
+    "```\n",
     "\n",
-    "* **Instalación de las herramientas necesarias para el taller**<BR>\n",
-    "    Veremos todas las herramientas necesarias para poder trabajar con el entorno de SparkR, así como la instalación y puesta en marcha de toda la infraestructura necesaria para el taller. Inicio del entorno de trabajo habitual para trabajar en el taller.<BR>\n",
-    "\n",
-    "* **Entorno de trabajo del taller**<BR>\n",
-    "    Detalles del manejo del entorno de trabajo con JupyterNotebooks y Spark + R<BR>\n",
-    "\n",
-    "* **Inicio del entorno de trabajo**<BR>\n",
-    "    Flujo de trabajo con Spark + R<BR>\n",
-    "\n",
-    "* **Primeros pasos con SparkR**<BR>\n",
-    "    Trabajo con ejemplos de uso de Spark + R <BR>\n",
-    "\n",
-    "* **Lectura y Escritura de datos con SparkR**<BR>\n",
-    "    Trabajo con fuentes de datos, y tipos de conjuntos de datos, CSV, JSON, Parquet, ... Lectura y Escritura. Esquemas, y breve trabajo con SparkSQL. <BR>\n",
-    "\n",
-    "* **Operaciones y procesado de SparkDataFrames**<BR>\n",
-    "    Trabajamos y procesamos conjuntos de datos masivos con SparkSQL y funciones de agregación, filtrado, selección, etc. Usamos flujos de trabajo con magrittr. Revisamos la funcionalidad completa de la biblioteca de SparkR.<BR>\n",
-    "\n",
-    "* **Minería de datos con la biblioteca de SparkR**<BR>\n",
-    "    Aplicamos las técnicas de minería de datos y Machine Learning que proporciona SparkR: GLM, KMeans, NaiveBayes y AFT.<BR>\n",
-    "\n",
-    "* **Minería de datos con la biblioteca sparklyr**<BR>\n",
-    "    Utilizamos la funcionalidad de la biblioteca ``sparklyr`` para procesar conjuntos de datos. Aplicamos los métodos de minería de datos y otras operaciones.<BR>\n",
-    "\n",
-    "* **Visualización de datos**<BR>\n",
-    "    Visualización con la herramienta de experimentación reproducible Zeppelin (beta)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Breve encuesta sobre el uso de R\n",
-    "\n",
-    "![formsg](http://www.irvineducator.com/uploads/6/3/7/4/63744617/4194226_orig.jpg)\n",
+    "Aquí podemos escribir sentencias SQL para poder tratar datos y visualizarlos.\n",
     "\n",
     "\n",
-    "Rellena esta mini-encuesta sobre el uso de R:\n",
     "\n",
     "\n",
-    "https://goo.gl/forms/AK4wKmgYNGaEdvLy1\n",
+    "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"font-size:2.0em\">Comenzamos el Taller !</span>"
    ]
   },
   {
